force-app/main/default/objects/C_Form__c/C_Form__c.object-meta.xml
<CustomObject>
    <description>Form definition - the top-level container for a questionnaire or assessment</description>
    <label>Form</label>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>