force-app/main/default/objects/C_Form__c/fields/C_Default_Language__c.field-meta.xml
<CustomField>
    <fullName>C_Default_Language__c</fullName>
    <description
  >Default language for form content (API code: en, fr, nl, de, pt). The renderer loads C_Translation__c records for other languages when translations are enabled.</description>
    <label>Default Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>nl</fullName>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>pt</fullName>
                <label>Portuguese</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>