force-app/main/default/objects/C_Form__c/fields/C_Description__c.field-meta.xml
<CustomField>
    <fullName>C_Description__c</fullName>
    <description
  >Optional long-text summary of the form purpose or scope. Shown in form lists and documentation; not displayed to respondents unless surfaced in the renderer.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>