force-app/main/default/objects/C_Form__c/fields/C_Hide_From_Form_Builder__c.field-meta.xml
<CustomField>
    <fullName>C_Hide_From_Form_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this form is hidden from the Form Builder form list (e.g. internal asset library container).</description>
    <label>Hide From Form Builder</label>
    <type>Checkbox</type>
</CustomField>