force-app/main/default/objects/C_Form__c/fields/C_Layout_Mode__c.field-meta.xml
<CustomField>
    <fullName>C_Layout_Mode__c</fullName>
    <label>Layout Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>classic</fullName>
                <label>Classic</label>
            </value>
            <value>
                <fullName>conversational</fullName>
                <label>Conversational</label>
            </value>
            <value>
                <fullName>wizard</fullName>
                <label>Wizard</label>
            </value>
            <value>
                <fullName>cardBased</fullName>
                <label>Card Based</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>