force-app/main/default/objects/C_Form__c/fields/C_Version__c.field-meta.xml
<CustomField>
    <fullName>C_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>