force-app/main/default/objects/C_Form__c/listViews/All_Forms.listView-meta.xml
<ListView>
    <fullName>All_Forms</fullName>
    <columns>NAME</columns>
    <columns>C_Status__c</columns>
    <columns>C_Version__c</columns>
    <columns>C_Default_Language__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Forms</label>
</ListView>